# zarrdump

./: .pre-commit-config.yaml  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: lint.yaml  pytest.yaml
tests/: test_core.py
zarrdump/: __init__.py  core.py
