[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zarrdump"
version = "0.7.0"
description = "Describe zarr stores from the command line."
readme = "README.rst"
license = { text = "BSD 3-Clause license" }
authors = [
    { name = "Oliver Watt-Meyer", email = "oliverwatt@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=7.0.0",
    "fsspec>=0.7.0",
    "xarray>=0.21.0",
    "zarr>=2.3.0"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
[project.urls]
Homepage = "https://github.com/oliverwm1/zarrdump"
Changelog = "https://github.com/oliverwm1/zarrdump/blob/main/HISTORY.rst"

[project.scripts]
zarrdump = "zarrdump.core:dump"

[tool.setuptools]
packages = ["zarrdump"]

[project.optional-dependencies]
dev = ["pre-commit", "pytest", "ruff"]
obstore = ["obstore"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
